test/bad/loops/until02.px

until true, 1 do
    skip
